--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Timelinizator</title>
 		<meta charset="UTF-8">
-		<script async src="bundle.js"></script>
 	</head>
 	<body>
-		Test
+        <div id="root"></div>
+		<script src="bundle.js"></script>
 	</body>
 </html>
