Add json and timelinejs preview

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Timelinizator</title>
-		<meta charset="UTF-8">
-	</head>
-	<body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Timelinizator</title>
+        <link title="timeline-styles"
+              rel="stylesheet"
+              href="//cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+        <script src="//cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+    </head>
+    <body>
         <div id="root"></div>
-		<script src="bundle.js"></script>
-	</body>
+        <div id="json"></div>
+        <div id='timeline-embed' style="width: 100%; height: 600px"></div>
+        <script src="bundle.js"></script>
+    </body>
 </html>
