--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <body>
         <div id="root"></div>
         <div id="json"></div>
-        <div id='timeline-embed' style="width: 100%; height: 600px"></div>
+        <!--        <div id='timeline-embed' style="width: 100%; height:
+            600px"></div> -->
         <script src="bundle.js"></script>
     </body>
 </html>
