--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <title>Timelinizator</title>
         <link title="timeline-styles"
               rel="stylesheet"
-              href="//cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
-        <script src="//cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+              href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
+        <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
     </head>
     <body>
         <div id="root"></div>
