Add timelinejs preview

--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Timelinizator</title>
-        <link title="timeline-styles"
-              rel="stylesheet"
-              href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
-        <script src="https://cdn.knightlab.com/libs/timeline3/latest/js/timeline.js"></script>
+        <script src="bundle.js"
+                defer></script>
     </head>
     <body>
         <div id="root"></div>
-        <!--        <div id='timeline-embed' style="width: 100%; height:
-            600px"></div> -->
-        <script src="bundle.js"></script>
     </body>
 </html>
