Split vendor and app

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Timelinizator</title>
-        <script src="bundle.js"
-                defer></script>
+        <script src="/static/js/vendor.js"
+                defer>
+        </script>
+        <script src="/static/js/bundle.js"
+                defer>
+        </script>
     </head>
     <body>
         <div id="root"></div>
