--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="/static/js/vendor.js"
                 defer>
         </script>
-        <script src="/static/js/bundle.js"
+        <script src="/static/js/app.js"
                 defer>
         </script>
     </head>
