Split css from js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <title>Timelinizator</title>
+        <link rel="stylesheet"
+              href="/static/css/app.css">
+        </link>
         <script src="/static/js/vendor.js"
                 defer>
         </script>
