--- a/preview/preview.html
+++ b/preview/preview.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link title="timeline-styles"
               rel="stylesheet"
               href="https://cdn.knightlab.com/libs/timeline3/latest/css/timeline.css">
